--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/gabrielagomesv/Class-Digital_Experience_Plataform#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mysql": "^2.16.0"
